--- a/AC2/index.html
+++ b/AC2/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Jogos para WEB</title>
 </head>
 <body>
-    <p>Ricardo Henrique Sodré</p>
+    <h4>Ricardo Henrique Sodré</h4>
+    <a href="index2.html">Página 2</a> 
 </body>
 </html>
