--- a/AC2/index2.html
+++ b/AC2/index2.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Jogos para WEB</title>
 </head>
 <body>
-    <img src="img/facens_logo.jpg" width="350" height="100">
+    <img src="img/facens_logo.png" width="350" height="100">
     <h2>Curso de Jogos Digitais</h2>
     <h3>Disciplina de Jogos para Web</h3>
     <h4>A disciplina apresenta como é realizado a produção de jogos digitais<br> para plataforma web.
