--- a/AC2/index2.html
+++ b/AC2/index2.html
@@ -14,5 +14,7 @@
         Com uma introdução as ferramentas de<br> desenvolvimento para navegadores e conceitos utilizados pela<br>
         industria para criação de jogos para navegadores.
     </h4>
+
+    <a href="bandeira.html">Bandeira do Japão</a><br>
 </body>
 </html>
