--- a/AC2/index.html
+++ b/AC2/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h4>Ricardo Henrique Sodré</h4>
-    <a href="index2.html">Página 2</a> 
+    <a href="index2.html">Página 2</a> <br>
+    <a href="bandeira.html">Bandeira do Japão</a><br>
 </body>
 </html>
